--- a/css/style.css
+++ b/css/style.css
@@ -98,7 +98,12 @@ body {
     width: 350px;
     display: flex;
     flex-direction: column;
-    padding: 0 15px;
+    padding: 20px 15px;
+    border: 1px solid var(--cor03);
+    border-radius: 5px;
+    box-shadow: 2px 2px 5px #605f5f73;
+    margin: 15px;
+    background-color: var(--cor01);
 }
 
 label {
@@ -138,7 +143,7 @@ input:focus {
 }
 
 button {
-    margin-top: 30px;
+    margin-top: 60px;
     padding: 12px;
     font-size: 16px;
     font-weight: bold;
